Add sidebar and onboarding components, update app layout and styles

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
 <router-outlet></router-outlet>
-<app-titlebar></app-titlebar>
+<app-titlebar class="title-bar"></app-titlebar>
+<app-onboarding *ngIf="showOnboarding" (completed)="finishOnboarding()" class="onboarding"></app-onboarding>
+<app-home></app-home>
