--- a/src/custom-theme.scss
+++ b/src/custom-theme.scss
@@ -39,9 +39,11 @@ $rclone-manager-theme: mat.define-light-theme(
 .light {
 
   /* Define custom colors for light mode */
-  --titlebar-background: #ffffff;
-  --titlebar-text-color: #000000;
-  --border-color: #dbdbdb;
+  --app-background: #ffffff;
+  --semi-transparent-background: rgba(255, 255, 255, 0.8);
+  --app-text-color: #000000;
+  --secodary-text-color: #939090;
+  --border-color: #cfcfcf;
   --button-background: #f5f5f5;
   --button-text: #000000;
   --button-hover: #dddddd;
@@ -52,16 +54,17 @@ $rclone-manager-theme: mat.define-light-theme(
   --selected-border: #007bff;
   --light-theme-color: white;
   --dark-theme-color: black;
-  --logo-url: url("./assets/rclone_symbolic_light.svg");
 }
 
 /* 🌙 Dark Theme */
 .dark {
 
   /* Define custom colors for dark mode */
-  --titlebar-background: #1e1e1e;
-  --titlebar-text-color: #ffffff;
-  --border-color: #333;
+  --app-background: #1e1e1e;
+  --semi-transparent-background: rgba(30, 30, 30, 0.8);
+  --app-text-color: #ffffff;
+  --secodary-text-color: #939090;
+  --border-color: #808080;
   --button-background: #333;
   --button-text: #ffffff;
   --button-hover: #444;
@@ -72,7 +75,17 @@ $rclone-manager-theme: mat.define-light-theme(
   --selected-border: #007bff;
   --light-theme-color: white;
   --dark-theme-color: black;
-  --logo-url: url("./assets/rclone_symbolic_dark.svg");
+}
+
+:root {
+  --title-bar-padding: 8px;
+  --titlebar-height: 40px; // Adjust this value to match your title bar height
+  --titlebar-border: 1px;
+  --app-height: calc(100vh - (var(--titlebar-height) + var(--title-bar-padding) + var(--titlebar-border)));
+
+  p {
+    color: var(--secodary-text-color);
+  }
 }
 
 html,
@@ -90,6 +103,25 @@ body {
   --mat-menu-item-label-text-size: 16px;
 }
 .mat-mdc-menu-panel {
+  transition: background-color 0.3s ease-in-out !important;
   min-width: 252px !important;
   min-height: 230px;
+  background-color: var(--main-background) !important;
+}
+
+.mat-mdc-menu-item {
+  transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out !important;
+  color: var(--titlebar-text-color) !important;
+
+  &:hover {
+    background-color: var(--button-hover) !important;
+  }
+}
+
+.mat-divider {
+  border-color: var(--border-color) !important;
+}
+
+.mat-mdc-card-subtitle {
+  color: var(--titlebar-text-color) !important;
 }
