--- a/src/custom-theme.scss
+++ b/src/custom-theme.scss
@@ -54,6 +54,9 @@ $rclone-manager-theme: mat.define-light-theme(
   --selected-border: #007bff;
   --light-theme-color: white;
   --dark-theme-color: black;
+  --green: #5CB85C;
+  --orange: #F89F24;
+  --red: #FF0000;
 }
 
 /* 🌙 Dark Theme */
@@ -75,17 +78,17 @@ $rclone-manager-theme: mat.define-light-theme(
   --selected-border: #007bff;
   --light-theme-color: white;
   --dark-theme-color: black;
+  --green: #5CB85C;
+  --orange: #F89F24;
+  --red: #FF0000;
 }
 
 :root {
   --title-bar-padding: 8px;
   --titlebar-height: 40px; // Adjust this value to match your title bar height
   --titlebar-border: 1px;
+  --sidebar-width: 250px;
   --app-height: calc(100vh - (var(--titlebar-height) + var(--title-bar-padding) + var(--titlebar-border)));
-
-  p {
-    color: var(--secodary-text-color);
-  }
 }
 
 html,
@@ -106,12 +109,12 @@ body {
   transition: background-color 0.3s ease-in-out !important;
   min-width: 252px !important;
   min-height: 230px;
-  background-color: var(--main-background) !important;
+  background-color: var(--app-background) !important;
 }
 
 .mat-mdc-menu-item {
   transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out !important;
-  color: var(--titlebar-text-color) !important;
+  color: var(--app-text-color) !important;
 
   &:hover {
     background-color: var(--button-hover) !important;
@@ -124,4 +127,9 @@ body {
 
 .mat-mdc-card-subtitle {
   color: var(--titlebar-text-color) !important;
+}
+
+.icons {
+  width: 24px;
+  height: 24px;
 }
